<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        android:clickable="true"
        android:onClick="back">
        
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/arrow_back"
	        android:contentDescription="@string/content_back" />
    </LinearLayout>
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/horizontal_divider"
        android:contentDescription="@string/content_horizontal_divider" />
    
    <SearchView
        android:id="@+id/searchList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-15dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint" >
    </SearchView>

</LinearLayout>
