<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.legendleo.yeeshop.MainActivity" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_bg"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/home_unselected"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/home_text"
                android:textSize="13sp"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/category_unselected"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/category_text"
                android:textSize="13sp"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shoppingcart_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shoppingcart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/shoppingcart_unselected"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/shoppingcart_text"
                android:textSize="13sp"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/center_unselected"
                android:drawablePadding="0dp"
                android:gravity="center"
                android:text="@string/center_text"
                android:textSize="13sp"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>