<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/product_header" />

    
    <ScrollView
        android:id="@+id/proScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/lightGray"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:showDividers="middle" >
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >
                
	            <android.support.v4.view.ViewPager
	                android:id="@+id/viewPager"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" />
	            
	            <ImageView
	                android:id="@+id/stubImg"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_centerInParent="true"
	                android:src="@drawable/image_default_small"
	                android:contentDescription="@string/content_product_img" />
	            
                <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignParentBottom="true"
			        android:layout_marginBottom="30dp"
			        android:paddingRight="8dp"
			        android:gravity="right"
			        android:orientation="horizontal">
			        <LinearLayout
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center"
			            android:background="@drawable/pagerbg" >
				        <TextView 
				            android:id="@+id/pagerText1"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:textSize="12sp"
				            android:text="0" />
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:textSize="12sp"
				            android:text="/" />
				        <TextView 
				            android:id="@+id/pagerText2"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:textSize="12sp"
				            android:text="0" />
			        </LinearLayout>
			    </LinearLayout>
                
            </RelativeLayout>
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:clickable="true"
                android:onClick="proDetailClick"
                android:background="@drawable/layout_selector"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/productTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="商品名称：加载中..."
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="商品编号："
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/productNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_arrow"
                    android:src="@drawable/arrow_right_thin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:clickable="true"
                android:onClick="proCommentsClick"
                android:background="@drawable/layout_selector"
                android:orientation="horizontal" >

                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:columnCount="3"
                    android:orientation="horizontal"
                    android:rowCount="5" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="售价："
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="VIP价格："
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/productVIPPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_columnSpan="2"
                        android:textSize="16sp"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_columnSpan="2"
                        android:text="(以上价格均不含税金)"
                        android:textSize="14sp"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="商品评分："
                        android:textSize="16sp" />

                    <RatingBar
                        android:id="@+id/productRatingBar"
                        style="?android:ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_columnSpan="2"
                        android:layout_gravity="center_vertical"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/productComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/productConsult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:textSize="14sp" />
                </GridLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_arrow"
                    android:src="@drawable/arrow_right_thin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="proSizesClick"
                android:background="@drawable/layout_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="尺寸："
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/productSize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="材质："
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/productMaterial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_arrow"
                    android:src="@drawable/arrow_right_thin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="购买数量："
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="content_des"
                    android:src="@drawable/product_num_des" />

                <EditText
                    android:id="@+id/productNums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="5"
                    android:inputType="number"
                    android:text="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="content_add"
                    android:src="@drawable/product_num_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/lightGray"
                android:orientation="vertical" >

                <Button
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="上拉查看图文详情" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buyBtn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy_text" />

        <Button
            android:id="@+id/addCartBtn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addcart_text" />
    </LinearLayout>

</LinearLayout>